--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Datasource Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/PhotographyDb
+spring.datasource.url=jdbc:postgresql://localhost:5432/PhotographyDb?serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
