--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create-drop
+
+security.enable_csrf=true
+
