--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/PhotographyDb?serverTimez
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 security.enable_csrf=true
 
