--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id "org.flywaydb.flyway" version "8.3.0"
 	id 'java'
 }
 
 group = 'com.kseniyamargaretphotography'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -21,8 +22,9 @@ dependencies {
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.2'
 	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 	implementation 'org.flywaydb:flyway-core'
-	runtimeOnly 'org.postgresql:postgresql'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.6.0'
+	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly group: 'org.flywaydb', name: 'flyway-gradle-plugin', version: '8.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
@@ -30,6 +32,13 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
+
+flyway {
+	url = 'jdbc:postgresql://localhost:5432/PhotographyDb?serverTimezone=UTC '
+	user = 'admin'
+	password = 'admin'
+}
+
 
 test {
 	useJUnitPlatform()
